@@ -399,15 +399,15 @@ class SubPanelFilter(SubPanel):
             if ch is None:
                 return
         dlg = wx.FileDialog(self, "Open polygon file",
-                    self.config.GetWorkingDirectory(name="Polygon"), "",
+                    self.config.get_dir(name="Polygon"), "",
                     "ShapeOut polygon file (*.poly)|*.poly", wx.FD_SAVE)
         if dlg.ShowModal() == wx.ID_OK:
             fname = dlg.GetPath()
-            self.config.SetWorkingDirectory(dlg.GetDirectory(),
+            self.config.set_dir(dlg.GetDirectory(),
                                             name="Polygon")
             dlg.Destroy()
         else:
-            self.config.SetWorkingDirectory(dlg.GetDirectory(),
+            self.config.set_dir(dlg.GetDirectory(),
                                             name="Polygon")
             dlg.Destroy()
             return # nothing more to do here
@@ -461,15 +461,15 @@ class SubPanelFilter(SubPanel):
     
     def OnPolygonImport(self, e=None):
         dlg = wx.FileDialog(self, "Open polygon file",
-                    self.config.GetWorkingDirectory(name="Polygon"), "",
+                    self.config.get_dir(name="Polygon"), "",
                     "ShapeOut polygon file (*.poly)|*.poly", wx.FD_OPEN)
         if dlg.ShowModal() == wx.ID_OK:
             fname = dlg.GetPath()
-            self.config.SetWorkingDirectory(dlg.GetDirectory(),
+            self.config.set_dir(dlg.GetDirectory(),
                                             name="Polygon")
             dlg.Destroy()
         else:
-            self.config.SetWorkingDirectory(dlg.GetDirectory(),
+            self.config.set_dir(dlg.GetDirectory(),
                                             name="Polygon")
             dlg.Destroy()
             return # nothing more to do here
